--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v6
         with:
-          context: ./BE/app
+          context: ./BE
           file: ./BE/app/Dockerfile
           load: true
           push: false
